# oresat-solar-app

./: CMakeLists.txt  Kconfig  README.md  prj.conf  pyocd.yml  sample.yaml
boards/mcxn947_solar_card/: Kconfig  Kconfig.defconfig  Kconfig.mcxn947_solar_card  README.md  board.yml  mcxn947_solar_card-pinctrl.dtsi  mcxn947_solar_card.dtsi  mcxn947_solar_card.yaml  mcxn947_solar_card_mcxn947_cpu0.dts  mcxn947_solar_card_mcxn947_cpu0.dtsi
drivers/sensor/ti/tmp101/: CMakeLists.txt  Kconfig  tmp101.c  tmp101.h  tmp101_trigger.c
dts/bindings/: solar-card.yaml
dts/bindings/sensor/: ti,tmp101.yaml
src/: blink.c  dac.c  i2c_sensor.c  main.c  solar.c
